# EchoNote

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  License  README.md  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
asr-service/: README.md  pyproject.toml
asr-service/benchmarks/: performance_benchmark.py
asr-service/echonote_asr/: __init__.py  __main__.py  app.py  diarization.py  logging.py  model.py  schemas.py  spike_real_asr.py  text_sanitizer.py  transcriber.py  wav.py
asr-service/echonote_asr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
asr-service/tests/: test_app_transcript_contract.py  test_diarization.py  test_model.py  test_text_sanitizer.py  test_transcriber.py
companion/: README.md  index.html  package-lock.json  package.json  vite.config.ts
companion/src/: main.ts  styles.css
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/icons/: icon.icns
companion/src-tauri/src/: commands.rs  discovery.rs  lib.rs  logs.rs  main.rs  path_resolver.rs  process.rs  settings.rs  setup.rs  setup_detector.rs  setup_installer.rs  setup_types.rs  state.rs
docs/: API_CONTRACT.md  DELIVERY_PLAN.md  M3_REAL_ASR_SPIKE.md  M6_E2E_TEST_PLAN.md  MAC_VIRTUAL_AUDIO_GUIDE.md  MVP_ACCEPTANCE_CHECKLIST.md  PRD.md  PRIVACY.md  RELEASE.md  TECH_DESIGN.md  TROUBLESHOOTING.md  V0_2_0_FAKE_BACKEND_SMOKE.md  V0_2_0_TAURI_COMPANION_PRD.md  V0_2_0_TAURI_COMPANION_TASKS.md  V0_2_0_TAURI_COMPANION_TECH_DESIGN.md  V0_3_0_SETUP_WIZARD_PRD.md  V0_3_0_SETUP_WIZARD_TASKS.md  V0_3_0_SETUP_WIZARD_TECH_DESIGN.md  V0_4_0_SMART_CHUNKING_SPEAKER_DIARIZATION_PRD.md  V0_4_0_SMART_CHUNKING_SPEAKER_DIARIZATION_QA.md  V0_4_0_SMART_CHUNKING_SPEAKER_DIARIZATION_TASKS.md  V0_4_0_SMART_CHUNKING_SPEAKER_DIARIZATION_TECH_DESIGN.md  V0_6_0_LLM_TRANSCRIPT_CORRECTION_PRD.md  V0_6_0_LLM_TRANSCRIPT_CORRECTION_TASKS.md  V0_6_0_LLM_TRANSCRIPT_CORRECTION_TECH_DESIGN.md  V0_8_0_PERFORMANCE_BASELINE.md  V0_8_0_PERFORMANCE_OPTIMIZATION_TASKS.md  performance-budgets.json
plugin/: README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
plugin/scripts/: package.mjs  (+3 more)
scripts/: v0_2_0_fake_backend_smoke.mjs  v0_4_0_real_diarization_smoke.py
(+79 files in other folders)
