[project]
name = "echonote-asr"
version = "0.6.0"
description = "Local ASR service contracts for EchoNote."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.29.0"
]

[project.scripts]
echonote-asr = "echonote_asr.__main__:main"

[project.optional-dependencies]
dev = []
mlx = [
  "mlx-audio>=0.1.0"
]
diarization = [
  "huggingface_hub>=0.23.0",
  "pyannote.audio>=4.0.0,<5.0.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
