[package]
name = "echonote-companion"
version = "0.2.0"
description = "EchoNote ASR Companion desktop app."
authors = ["EchoNote Contributors"]
edition = "2021"
rust-version = "1.77"
build = "build.rs"

[lib]
name = "echonote_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
time = { version = "0.3", features = ["formatting"] }
